kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gohello
  labels:
    app: gohello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gohello
  template:
    metadata:
      labels:
        app: gohello
  template:
    metadata:
      labels:
        app: gohello
    spec:
      containers:
      - name: gohello
        image: docker.io/amsirin/gohello:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
        resources:
          limits:
            cpu: 10m
            memory: 30Mi
          requests:
            cpu: 10m
            memory: 30Mi
      terminationGracePeriodSeconds: 30
