kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gohello
  labels:
    app: gohello
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: gohello
